Updated to solve normal expresions with order of operations

--- a/calculator/calculator.ipynb
+++ b/calculator/calculator.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Working on solving inner parentheses // not utilized yet\n",
     "import re\n",
     "def solve(a):\n",
     "    while '(' in a:\n",
@@ -153,16 +154,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "\n",
+    "def solve(expression, operator):\n",
+    "    num1, num2 = map(int, expression.split(operator))\n",
+    "    if operator == '+':\n",
+    "        return num1 + num2\n",
+    "    elif operator == '-':\n",
+    "        return num1 - num2\n",
+    "    elif operator == '*':\n",
+    "        return num1 * num2\n",
+    "    elif operator == '/':\n",
+    "        return num1 // num2  # Use // for integer division\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "def useCalc():\n",
-    "    expresion = input(\"Test Calculator, use +, -, * , / , ^(for power)\")\n",
-    "    expresion = re.sub(r'\\s+', '', expresion    )\n",
-    "    new_exp = solve(expresion)\n",
-    "    print(new_exp)\n"
+    "    expression = input(\"Test Calculator, use +, -, *, /, ^(for power): \")\n",
+    "    expression = re.sub(r'\\s+', '', expression)  # Remove any whitespace\n",
+    "\n",
+    "\n",
+    "    operations = {\n",
+    "        '^': r'(\\d+)\\^(\\d+)',\n",
+    "        '*': r'(\\d+)\\*(\\d+)',\n",
+    "        '/': r'(\\d+)/(\\d+)',\n",
+    "        '+': r'(\\d+)\\+(\\d+)',\n",
+    "        '-': r'(\\d+)-(\\d+)',\n",
+    "    }\n",
+    "\n",
+    "    def process_operation(expression, op_regex, operator):\n",
+    "        match = re.search(op_regex, expression)\n",
+    "        while match:\n",
+    "            full_match = match.group(0)\n",
+    "            result = solve(full_match, operator)\n",
+    "            expression = expression.replace(full_match, str(result), 1)\n",
+    "            match = re.search(op_regex, expression)\n",
+    "        return expression\n",
+    "\n",
+    "    while any(op in expression for op in '^*/+-'):\n",
+    "        if '^' in expression:\n",
+    "            expression = process_operation(expression, operations['^'], '^')\n",
+    "        elif '*' in expression or '/' in expression:\n",
+    "            if '*' in expression:\n",
+    "                expression = process_operation(expression, operations['*'], '*')\n",
+    "            if '/' in expression:\n",
+    "                expression = process_operation(expression, operations['/'], '/')\n",
+    "        elif '+' in expression or '-' in expression:\n",
+    "            if '+' in expression:\n",
+    "                expression = process_operation(expression, operations['+'], '+')\n",
+    "            if '-' in expression:\n",
+    "                expression = process_operation(expression, operations['-'], '-')\n",
+    "\n",
+    "    print(\"Result:\", expression)\n"
    ]
   },
   {
@@ -171,17 +219,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "no such group",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/tjthomassen/Downloads/calculator.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m useCalc()\n",
-      "\u001b[1;32m/Users/tjthomassen/Downloads/calculator.ipynb Cell 10\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m expresion \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mTest Calculator, use +, -, * , / , ^(for power)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m expresion \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\\u001b[39m\u001b[39ms+\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, expresion    )\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m new_exp \u001b[39m=\u001b[39m solve(expresion)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(new_exp)\n",
-      "\u001b[1;32m/Users/tjthomassen/Downloads/calculator.ipynb Cell 10\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolve\u001b[39m(a):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39m(\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m a:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         newa \u001b[39m=\u001b[39m findPar(a)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m innerSolve(newa)\n",
-      "\u001b[1;32m/Users/tjthomassen/Downloads/calculator.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     result \u001b[39m=\u001b[39m innerSolve(y)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39m# use re to replace that group with the result \u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m inner \u001b[39m=\u001b[39m match\u001b[39m.\u001b[39;49mgroup(\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Solve the inner expression\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Downloads/calculator.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m result \u001b[39m=\u001b[39m innerSolve(inner)\n",
-      "\u001b[0;31mIndexError\u001b[0m: no such group"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 11\n"
      ]
     }
    ],
