New changes to code

--- a/car_data_pandas/car_data/p1.ipynb
+++ b/car_data_pandas/car_data/p1.ipynb
@@ -2,6 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the start of my code I will be making a decsion tree predicitng fatal car crashes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85      19\n",
+      "155     21\n",
+      "440     23\n",
+      "520      6\n",
+      "547      4\n",
+      "553      2\n",
+      "723     13\n",
+      "780      1\n",
+      "814      3\n",
+      "1004    16\n",
+      "1031    15\n",
+      "1134    23\n",
+      "1158     0\n",
+      "1168    19\n",
+      "1271    16\n",
+      "1555    19\n",
+      "1556    15\n",
+      "1564     1\n",
+      "1774    20\n",
+      "1783    22\n",
+      "1785    19\n",
+      "Name: HOUR_OF_DAY, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import re \n",
+    "\n",
+    "# start of prediciotn modle will look to identify trends\n",
+    "\n",
+    "df = pd.read_csv('2015washington.csv')\n",
+    "fatal = df[df['FATAL_COUNT']>= 1]\n",
+    "fatal_time = fatal['HOUR_OF_DAY']\n",
+    "avg = fatal_time.mean()\n",
+    "print(fatal_time)\n",
+    "# AVG Time = 13\n",
+    "# times before 6 and later than 15 / all fatal accidents occur \n",
+    "#print(fatal.describe())\n",
+    "night = df[(df['HOUR_OF_DAY']>= 15) & (df['HOUR_OF_DAY']<= 4)]\n",
+    "nightD_test = night['FATAL_COUNT']\n",
+    "night_D = night[night['FATAL_COUNT']>= 1].value_counts()\n",
+    "#print(night_D)\n",
+    "#print(night.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is the end of my work below are just differt things I messed around with"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -314,52 +389,6 @@
     "#weinj.head()\n",
     "\n",
     "weinj.plot(kind='bar', stacked=True, figsize=(10,10))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "sqlite3.Connection() takes no keyword arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/tjthomassen/Desktop/projects/p1/p1.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Desktop/projects/p1/p1.ipynb#W6sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mwhile\u001b[39;00m num_of_tries \u001b[39m<\u001b[39m WAIT_TIME:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Desktop/projects/p1/p1.ipynb#W6sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/tjthomassen/Desktop/projects/p1/p1.ipynb#W6sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         mydb \u001b[39m=\u001b[39m connect(host\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m127.0.0.1\u001b[39;49m\u001b[39m\"\u001b[39;49m, user\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mroot\u001b[39;49m\u001b[39m\"\u001b[39;49m, db\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mCrash\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Desktop/projects/p1/p1.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         \u001b[39mif\u001b[39;00m mydb\u001b[39m.\u001b[39mis_connected():\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tjthomassen/Desktop/projects/p1/p1.ipynb#W6sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mConnected\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: sqlite3.Connection() takes no keyword arguments"
-     ]
-    }
-   ],
-   "source": [
-    "import sqlite3\n",
-    "from mysql.connector import connect, Error\n",
-    "import time\n",
-    "\n",
-    "connect = sqlite3.connect('Crash.db')\n",
-    "cursor = connect.cursor()\n",
-    "WAIT_TIME = 10\n",
-    "\n",
-    "\n",
-    "num_of_tries = 0\n",
-    "while num_of_tries < WAIT_TIME:\n",
-    "    try:\n",
-    "        mydb = connect(host=\"127.0.0.1\", user=\"root\", db='Crash')\n",
-    "        if mydb.is_connected():\n",
-    "            print(\"Connected\")\n",
-    "            break\n",
-    "    except Error as e:\n",
-    "        print(e)\n",
-    "\n",
-    "    num_of_tries += 1\n",
-    "    print(\"Waiting for MySQL to start\")\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "if num_of_tries >= WAIT_TIME:\n",
-    "    raise TimeoutError(\"MySQL is not running\")\n",
-    "\n"
    ]
   }
  ],
